# windstille

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  BUGS  CMakeLists.txt  CODINGSTYLE  CODINGSTYLE.md  COPYING  COPYING.md  EDITOR  EDITOR.md  INSTALL  INSTALL.md  Jamfile  Jamrules  Makefile  NEWS  NEWS.md  README  README.md  SConscript  SConstruct  TODO  autogen.sh  build-win32.sh  config.h  configure  configure.ac  example_glarea.cc  flake.nix  guix.scm  io.gitlab.windstille.Windstille-0_2.json  io.gitlab.windstille.Windstille.json  scons_enhancements.py  scons_tests.py  waf  (+8 more)
contrib/vs2003build/: Windstille.sln  Windstille.vcproj
data/: Jamfile  SConscript  armature.arm  coroutine.rb  editor.scm  game.rb  game.scm  helper.scm  navigation.nav  pose.pose  style.css  tiles.scm  tiles.xml
data/3dsprites/: barkeeper.wsprite  heroken.wsprite  monster.wsprite  powersuit.wsprite  sophie.wsprite  worker.wsprite  yagor.wsprite
data/armature/: armature.arm  bone-Armature.scm  mesh.mesh
data/controller/: dvorak.scm  gamepad.scm  gamepad2.scm  keyboard.scm  wiimote.scm  xbox360.scm  xboxdrv.scm
data/images/: arrow.sprite  car.xcf  carsketch.xcf  controldialog.xcf  cryo.xcf  elevator.xcf  elevatorbase.xcf  elevatorhead.xcf  elevatorsketch.xcf  elevatorwheel.xcf  explosion.sprite  flashlighthighlight.sprite  flashlightlight.sprite  generator.xcf  gun.xcf  gun1.xcf  gun3.xcf  gun4.xcf  haus2.xcf  haus3.xcf  hause.xcf  hedgehog_die.sprite  human.sprite  laserpointer.sprite  laserpointer_light.sprite  light3.sprite  metalwall.xcf  minesketch.xcf  planet.sprite  plasmagranate.xcf  policecar.xcf  rifle.xcf  room.xcf  room2.xcf  satchel.xcf  shuttle.xcf  sketchmu.xcf  spider_mine.sprite  stairs.xcf  streetlamp-highlight.sprite  (+8 more)
data/levels/: apartment.wst  forest.wst  industrial.wst  intro.wst  newformat2.wst  virtualreality.wst
data/locale/: de.po
data/music/: nightfall.rg  silence.rg
data/particlesystems/: deform.particles  fire.particles  gasleak.particles  smoke.particles  snow.particles  water.particles
data/scripts/: init.nut  init_script_vars.nut  windstille.nut
data/sectors/: bar.wst
data/shader/: blacknwhite.frag  border.frag  nightvision.frag  particledeform.frag  shader330.frag  shader330.vert  shockwave.frag  shockwave2.frag  simple.frag  wooble.frag
data/sounds/: README
doc/: Doxyfile  upload.sh
docs/: actions.dia  models.txt  wsprite_fileformat.txt
extra/: image_blur.cpp  sound_info.cpp  soundapp.cpp
extra/2dshadow/: 2dshadow.cpp  explain.xcf
extra/lenseflair/: lenseflair.cpp  lenseflair.hpp
extra/lensflare/: lenseflair.cpp  lensflare.cpp  lensflare.hpp
extra/memleak/: memleak.cpp
extra/shadertest/: shadertest.cpp  shadertest.hpp  test.frag  test.shader  test2.frag
extra/slideshow/: README  TODO  script.slideshow  slide_builder.cpp  slide_builder.hpp  slide_object.cpp  slide_object.hpp  slide_parser.cpp  slide_parser.hpp  slide_path.cpp  slide_path.hpp  slide_show.cpp  slide_show.hpp  slideshow.cpp  slideshow.hpp
lib/: Jamfile  README  SConscript
lib/glew/: Jamfile  glew.c
mk/cmake/: ClangTidy.cmake  InstallWithWrapper.cmake  MaximumWarnings.cmake
mk/jam/: compiler.jam  objects.jam  subdir.jam
shared-modules/fmt/: fmt-6.1.2.json
shared-modules/glm/: glm-0.9.9.0.json
shared-modules/gtkglext/: gtkglext-1.2.0-index-conflict-fix.patch  gtkglext-1.2.0-macro.patch  gtkglext-1.2.0.json  gtkglext-git.json
shared-modules/gtkglextmm/: gtkglextmm-1.2.0-gtk-macro.patch  gtkglextmm-1.2.0.json  gtkglextmm-git.json
shared-modules/gtkmm/: gtkmm-2.24.5.json
shared-modules/pango/: pango-1.42.4.json
shared-modules/pangox/: pangox-git.json
shared-modules/sigc++/: sigc++-2.9.3.json
shared-modules/squirrel/: squirrel.json
shared-modules/xcftools/: xcftools-1.0.7.json.old  xcftools-git.json
src/: Jamfile  Makefile.am  SConscript  armature_test.cpp  armature_test.hpp  baby_xml.cpp  baby_xml.hpp  blitter.cpp  blitter.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  character.cpp  character.hpp  color.hpp  config.cpp  config.hpp  console.cpp  console.hpp  controller_def.cpp  controller_def.hpp  controller_help_window.cpp  controller_help_window.hpp  conversation.cpp  conversation.hpp  dialog_manager.cpp  dialog_manager.hpp  display.cxx  display.hxx  elevator.cpp  elevator.hpp  energy_bar.cpp  energy_bar.hpp  entity.cpp  entity.hpp  field.hpp  file_reader.cpp  file_reader.hpp  file_reader_impl.hpp  (+116 more)
src/app/: app.cpp  app.hpp  config.cpp  config.hpp  console.cpp  console.hpp  controller_def.cpp  controller_def.hpp  globals.cpp  globals.hpp  (+8 more)
src/input/: Jamfile  Makefile.am  axis_button.cxx  axis_button.hxx  axis_factory.cxx  axis_factory.hxx  button_axis.cxx  button_axis.hxx  button_factory.cxx  button_factory.hxx  controller.cpp  controller.cxx  controller.hpp  controller.hxx  controller_description.cpp  controller_description.hpp  input_axis.hxx  input_axis_input_device.cxx  input_axis_input_device.hxx  input_button.hxx  input_button_input_device.cxx  input_button_input_device.hxx  input_configurator.cpp  input_configurator.hpp  input_event.hpp  input_event.hxx  input_manager.cpp  input_manager.cxx  input_manager.hpp  input_manager.hxx  input_manager_custom.cxx  input_manager_custom.hxx  input_manager_impl.cpp  input_manager_impl.cxx  input_manager_impl.hpp  input_manager_impl.hxx  input_manager_player.cxx  input_manager_player.hxx  input_manager_sdl.cpp  input_manager_sdl.hpp  (+6 more)
test/: SConstruct  baby_xml_test.cpp  collision_benchmark.cxx  collision_sprite_test.cxx  colltest.cxx  directory_test.cpp  easing_test.cpp  matrix_test.cpp  pathname.cpp  random_test.cpp  read_test.cpp  response_curve_test.cpp  scissor_drawable_test.cpp  shader_drawable_test.cpp  software_surface_test.cpp
tools/: README  SConscript  bone_export.py  bone_test.blend  fix_include_guards.sh  image_rename.rb  include_optimize.rb  ipo_export.py  mesh_export.py  model_test.blend  pose_export.py  windstille_export.py
win32/: Display.vcproj  Math.vcproj  PhysFSWrapper.vcproj  Util.vcproj  Windstille.sln  Windstille.vcproj
(+851 files in other folders)
