noinst_LIBRARIES = libwindstille_input.a

libwindstille_input_a_CPPFLAGS = \
  @WINDSTILLE_CFLAGS@

libwindstille_input_a_SOURCES = \
  controller.hxx \
  controller.cxx \
  input_event.hxx \
  input_manager.hxx \
  input_manager.cxx \
  input_manager_impl.hxx \
  input_manager_impl.cxx \
  input_manager_custom.hxx \
  input_manager_custom.cxx \
  input_manager_player.hxx \
  input_manager_player.cxx \
  input_button.hxx \
  input_axis.hxx \
  input_button_input_device.hxx \
  input_button_input_device.cxx \
  input_axis_input_device.hxx \
  input_axis_input_device.cxx \
  axis_button.hxx \
  axis_button.cxx \
  button_axis.hxx \
  button_axis.cxx \
  button_factory.hxx \
  button_factory.cxx \
  axis_factory.hxx \
  axis_factory.cxx \
  input_recorder.hxx \
  input_recorder.cxx \
  multi_button.hxx \
  multi_button.cxx

# EOF #
